tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__FlyingOINKment-AAAAAAAAAAAAAAAAAAABVQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 341,
  "prerequisites": [
    340
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You tried, it doesn't fly. And it also doesn't make any OINK sounds, sadly. But there might be some use for it...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Flying OINKment",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    340
  ],
  "rewards": [],
  "tasks": []
}
