tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__FoulFume-AAAAAAAAAAAAAAAAAAAGJw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1575,
  "prerequisites": [
    1556
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A foul fume (commonly known as sulfur dioxide) is an ingredient used in many recipes. It is acquired with a random chance when cooking vanilla food items (such as bread or raw meats) or jungle saplings in an oven.\n\n[warn]Food and Wood burning in the oven is currently broken, use saplings instead.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Foul Fume",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1556
  ],
  "rewards": [],
  "tasks": []
}
