tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__GreenhousesonMou-AAAAAAAAAAAAAAAAAAAJeQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2425,
  "prerequisites": [
    2344,
    2424
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You're almost there! To actually use the ritual, you need to recruit a coven first. Find some Coven Witches and complete their quests:\nThe means to control the dead -> Necromantic Stone\nThe beating means to master the infernal dimension -> Demon Heart\nI must perform many curses, bring me the necessary brew -> Brew of the Grotesquex5\nI desire to predict the future -> Crystal Ball\nOr just fight something.\n\nOnce completed, they'll disappear until you need them. They will sometimes appear near your spawn point if you walk by it, so don't position it over lava or something, since they CAN die and reduce the number of your coven. You can have 6, with one extra appearing for Cauldron work. Consider keeping some extras around in a dungeon just in case.\n\nAfter you recruit your coven, you just need a few things for the ritual itself: Spider Eye, Toe of Frog, Wool of Bat, Tongue of Dog, Owlet's Wing, Attuned Stone, and Attuned Stone (Charged).\n\nTo specify the biome, look in the Book of Biomes, and find 1) the type (Forest, Plains, etc.), and 2) the number. Type determines the foci used, and number determines the amount of Glowstone Dust used to get that specific biome. Make sure to pack up a ritual circle into a circle talisman so you don't have to redraw it, and bring some cobblestone to make a flat area (15x15, any height). Try not to do it at night unless you like dealing with infernals.\n\nTo actually do the ritual, have the ritual circle on the ground, the items (including the foci and Glowstone) in the circle, and right-click the center with the Seer's Stone.\n\nThe area affected is determined by the number of witches in your coven. It's 16 * (size of coven - 3) radius in a circular area, so 16/32/48 if it doesn't fail.\n\nUnfortunately, sometimes after logging out and back in again, you may find that it didn't work correctly in specific chunks, this is (possibly) due to a lack of chunk updates and it not saving the changed biome ID correctly. Just redoing the ritual doesn't really help, you'll just get patches in the same places, however placing water after the ritual and before logging out may help with this. Or use chickens. Lots of chickens.\n\nAlso, if you already have crops in the area, they'll disappear until a block update or relog.\n\n[note]PS: To pack your circle back up, you need to bring your altar with you.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Greenhouses on Mountains, Hell on Earth",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2344,
    2424
  ],
  "rewards": [],
  "tasks": []
}
