tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__HappenstanceOil-AAAAAAAAAAAAAAAAAAAJJg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2342,
  "prerequisites": [
    2339
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Happenstance Oil is an ingredient used in the production of a Crystal Ball and the Seer Stone.\n\nIt's created in a kettle using Redstone Soup, Potion of Night Vision (8:00), Eye of Ender, Golden Carrot, Spider Eye and Mandrake Root.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Happenstance Oil",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2339
  ],
  "rewards": [],
  "tasks": []
}
