tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__HungerNoMore-AAAAAAAAAAAAAAAAAAAGLg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1582,
  "prerequisites": [
    1583
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Dream Weaver of Fasting will add a boost to the saturation of a player when they wake up from a good nights sleep, essentially meaning they will not get hungry for the duration of the effect. If the dream weaver is corrupted by a nearby Dream Weaver of Nightmares, the weaver will instead add a hunger effect to the player.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Hunger No More!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1583
  ],
  "rewards": [],
  "tasks": []
}
