tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__LordofTorment-AAAAAAAAAAAAAAAAAAAJLA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2348,
  "prerequisites": [
    2347
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A Lord of Torment is a mighty demonic being that is able to create prisons to Torment its victims.\n\nThose foolish enough to summon one of these creatures must prepare for an arduous fight.\n\nA Lord of Torment may only be summoned using the Ritual outlined in a Torment Scroll.\nThese scrolls are hard to come by, but it is rumored that well treated Flame Imps have occasionally given them up.\n\nConsuming the Soul of a Torment Demon grants the ability to Torment others.\n\nIf you are very unlucky and the Lord of Torment disappears when entering the Torment dimension, use the Egg and spawn another one.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Lord of Torment",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2347
  ],
  "rewards": [],
  "tasks": []
}
